# chapter-debugger

./: .clang-format  .copilot-instructions.md  .gitignore  CMakeLists.txt  CMakeSettings.json  CommandLineArguments.cpp  CommandLineArguments.h  Common.h  FileUtilities.cpp  FileUtilities.h  GUID.cpp  GUID.h  ID3V2.h  ID3V2_COMM_Frame.h  ID3V2_Frame.cpp  ID3V2_Frame.h  ID3V2_FrameController.cpp  ID3V2_FrameController.h  ID3V2_FrameResource.h  ID3V2_FrameUtilities.cpp  ID3V2_FrameUtilities.h  ID3V2_Header.cpp  ID3V2_Header.h  ID3V2_TEXT_Frame.cpp  ID3V2_TEXT_Frame.h  LICENSE  PlatformUtilities.h  README.md  SequentialStream.cpp  SequentialStream.h  StringUtilities.h  main.cpp
src/: AttachedPictureFrame.cpp  AttachedPictureFrame.h  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  ChapterFrame.cpp  ChapterFrame.h  CommentsFrame.cpp  CommentsFrame.h  Common.h  FastRoutines.cpp  FastRoutines.h  FileUtilities.cpp  FileUtilities.h  Frame.cpp  Frame.h  FrameController.cpp  FrameController.h  FrameFactory.cpp  FrameFactory.h  FrameResource.h  Globals.cpp  Globals.h  Guid.cpp  Guid.h  ID3V2.cpp  ID3V2.h  ID3V2_COMM_Frame.cpp  ID3V2_Frame.cpp  ID3V2_Frame.h  ID3V2_FrameController.cpp  ID3V2_FrameController.h  ID3V2_FrameData.cpp  ID3V2_FrameData.h  ID3V2_FrameFactory.cpp  ID3V2_FrameFactory.h  ID3V2_FrameUtilities.cpp  ID3V2_Header.cpp  ID3V2_Header.h  ID3V2_TEXT_Frame.h  (+16 more)
